@@ -180,7 +180,6 @@ namespace QTest
     Q_TESTLIB_EXPORT char *toString(const void *);
 
     Q_TESTLIB_EXPORT int qExec(QObject *testObject, int argc = 0, char **argv = 0);
-    Q_TESTLIB_EXPORT int qExec(QObject *testObject, const QStringList &arguments);
 
     Q_TESTLIB_EXPORT bool qVerify(bool statement, const char *statementStr, const char *description,
                                  const char *file, int line);
