@@ -327,7 +327,6 @@ void tst_Selftests::runSubTest_data()
         << "multiexec"
         << "printdatatags"
         << "printdatatagswithglobaltags"
-        << "qexecstringlist"
         << "singleskip"
         << "skip"
         << "skipinit"
@@ -390,9 +389,6 @@ void tst_Selftests::runSubTest_data()
                     continue;
                 }
                 if (subtest == "multiexec") {
-                    continue;
-                }
-                if (subtest == "qexecstringlist") {
                     continue;
                 }
                 if (subtest == "benchliboptions") {
